[backend]: added search for state properties
